# GetWindowsServices

./: README.md
CMakeDir/: CMakeLists.txt
CMakeDir/DLL/: CMakeLists.txt  Header.h
CMakeDir/DLL_client/: CMakeLists.txt  main.cpp
testDLL/: testDLL.sln
testDLL/Debug/: testDLL.exp  testDLL.ilk  testDLL.lib  testDLLclient.ilk
testDLL/Release/: testDLL.exp  testDLL.iobj  testDLL.ipdb  testDLL.lib  testDLLclient.iobj  testDLLclient.ipdb
testDLL/testDLL/: Header.h  main.cpp  testDLL.vcxproj  testDLL.vcxproj.filters
testDLL/testDLL/Debug/: vc141.idb
testDLL/testDLL/Debug/testDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.17808.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  testDLL.lastbuildstate  testDLL.write.1u.tlog
testDLL/testDLL/Release/testDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  testDLL.lastbuildstate  testDLL.write.1u.tlog
testDLL/x64/Release/: testDLL.exp  testDLL.iobj  testDLL.ipdb  testDLL.lib
testDLLclient/: testDLLclient.sln
testDLLclient/Debug/: testDLLclient.ilk
testDLLclient/testDLLclient/: Header.h  main.cpp  testDLL.lib  testDLLclient.vcxproj
testDLLclient/testDLLclient/Debug/: vc141.idb
testDLLclient/testDLLclient/Debug/testDLLclient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testDLLclient.lastbuildstate
testDLLclient/x64/Debug/: testDLLclient.ilk
(+24 files in other folders)
